unpackaged/main/default/objects/Clinical_Trial_Intervention__c/Clinical_Trial_Intervention__c.object-meta.xml
<CustomObject>
    <label>Clinical Trial Intervention</label>
    <nameField>
        <displayFormat>CTIID-{0000}</displayFormat>
        <label>Clinical Trial Intervention ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trial Interventions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>