unpackaged/main/default/objects/Clinical_Trial_Intervention__c/fields/Clinical_Trial__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Trial</label>
    <referenceTo>Clinical_Trial__c</referenceTo>
    <relationshipName>NLM_Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>