unpackaged/main/default/objects/Clinical_Trial_Intervention__c/fields/Intervention_Category__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Category__c</fullName>
    <label>Intervention Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biological</fullName>
            </value>
            <value>
                <fullName>Device</fullName>
            </value>
            <value>
                <fullName>Drug</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Radiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>