unpackaged/main/default/objects/Clinical_Trial_Intervention__c/fields/Intervention_Name__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Name__c</fullName>
    <label>Intervention Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>