unpackaged/main/default/objects/Clinical_Trial_Intervention__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>key to ensure uniqueness</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>