unpackaged/main/default/objects/Clinical_Trial_Intervention__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intervention_Category__c</columns>
    <columns>Intervention_Name__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>